<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.PantryFragment">

    <TextView
        android:id="@+id/letsGetStarted"
        android:layout_width="303dp"
        android:layout_height="87dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:text="@string/pantryIntroductionText"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
            android:layout_marginTop="30dp"
            app:cardCornerRadius="25dp"
            android:layout_marginBottom="75dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/lightYellow"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:layout_constraintTop_toBottomOf="@id/letsGetStarted"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="25dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:circularflow_radiusInDP="25dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/orange"
                app:boxStrokeWidth="3dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:hint="@string/type_your_ingredient"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout" />


            <ImageView
                android:id="@+id/imgMic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/ic_mic_off"
                app:layout_constraintStart_toEndOf="@id/textInputLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/orange" />

            <Button
                android:id="@+id/btnAddIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:circularflow_radiusInDP="5dp"
                android:backgroundTint="@color/lightYellow"
                android:text="@string/add_ingredient"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIngredients" />

            <Button
                android:id="@+id/btnClearIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:circularflow_radiusInDP="5dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/lightYellow"
                android:text="@string/clearIngredientText"
                android:textColor="@color/grey"
                app:layout_constraintStart_toEndOf="@+id/btnAddIngredient"
                app:layout_constraintTop_toBottomOf="@+id/tvIngredients" />

            <Button
                android:id="@+id/btnGetRecipes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/orange"
                android:text="@string/btnSearchRecipesText"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:circularflow_radiusInDP="20dp"
                android:paddingHorizontal="60dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnAddIngredient" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>