<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RecipeFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">
        
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/recipeImage"
                android:src="@color/black"
                android:layout_width="match_parent"
                android:layout_height="270dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnFavorites"
                android:layout_marginTop="-70dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="5dp"
                app:borderWidth="0.5dp"
                android:backgroundTint="@color/lightYellow"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            
            <androidx.cardview.widget.CardView
                android:layout_marginTop="-55dp"
                app:cardCornerRadius="25dp"
                android:layout_marginBottom="0dp"
                app:cardElevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:textSize="25sp"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="25dp"
                        android:text="@string/recipeTitleText"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/grey" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imgTimer"
                            android:src="@drawable/ic_timer"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintVertical_bias="0.166"
                            app:tint="@color/green" />

                        <TextView
                            android:id="@+id/tvTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imgTimer"
                            android:textColor="@color/green"
                            android:text="@string/timer_text"/>

                        <TextView
                            android:id="@+id/tvMins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/tvTime"
                            android:textColor="@color/green"
                            android:text="mins"/>

                        <ImageView
                            android:id="@+id/imgServing"
                            android:src="@drawable/ic_serving"
                            android:layout_marginStart="40dp"
                            app:tint="@color/green"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/tvMins"/>

                        <TextView
                            android:id="@+id/tvServing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imgServing"
                            android:textColor="@color/green"
                            android:text="00"/>

                        <ImageView
                            android:id="@+id/imgHealth"
                            android:src="@drawable/ic_unhealthy"
                            android:layout_marginStart="40dp"
                            app:tint="@color/green"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imgServing"/>

                        <TextView
                            android:id="@+id/tvHealth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="Not healthy"
                            android:textColor="@color/green"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imgHealth"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imgVegetarian"
                            android:layout_width="41dp"
                            android:layout_height="38dp"
                            android:layout_marginStart="30dp"
                            android:contentDescription="Vegetarian"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tvHealth"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/vegetarian" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <TextView
                        android:id="@+id/tvIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="6dp"
                        android:gravity="left"
                        android:text="INGREDIENTS"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/grey"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recipe_ingredients_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"/>

                    <TextView
                        android:id="@+id/tvLabelIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="6dp"
                        android:textSize="18dp"
                        android:gravity="left"
                        android:text="INSTRUCTIONS"
                        android:textColor="@color/grey"
                        android:fontFamily="sans-serif-medium"/>

                    <TextView
                        android:id="@+id/tvInstructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/InstructionText" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>